# cpp_knowledge_base

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.devcontainer/: Dockerfile
.github/workflows/: build-and-test.yml
app/src/: main.cc
cmake/: BuildSetup.cmake  TargetFunctions.cmake
include/: Utils.h
src/: Utils.cc
tests/: CMakeLists.txt
tests/unit-tests/: Tests_Utils.cc
